# WES-Drop

./: .gitmodules  CMakeLists.txt  README.md  annotated.html  classes.html  config-doxygen.conf  dir_05820e11385299abaa75210eed928da2.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_2154d4c0c700e5222970fff9a3d7e493.html  dir_290e1540458e933d6ec57bee5adcdc33.html  dir_3327e372b9a493b9ea5533d23f98aa4a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68416365b3102f8d0a040749953c4025.html  dir_88dcf8671f238ceebdc8291a2ba83475.html  dir_8bf4066f0dbb51284496e4907f8fcda9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_b73e4d8db9f0fc294f16fecb0a05a5e4.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e797401711e5c48405577cdac77f3e3c.html  display_8c.html  display_8h.html  display_8h_source.html  display__errors_8h.html  display__errors_8h_source.html  doxygen_crawl.html  error__handler_8c.html  error__handler_8h.html  error__handler_8h_source.html  files.html  font_8c.html  font_8h.html  font_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  (+45 more)
.github/workflows/: build.yml
doc/: mainpage.md
include/: error_handler.h  stm32l0xx_it.h  system_clock.h  wes.h
lib/display/: CMakeLists.txt
lib/display/include/: display.h  display_errors.h  font.h  ssd1309_if.h
lib/display/src/: display.c  font.c  ssd1309_if.c
lib/level/: CMakeLists.txt
lib/level/include/: level.h  level_errors.h  sr04m_if.h
lib/level/src/: level.c  sr04m_if.c
linker/: linker.ld
scripts/: build.sh  build_clean.sh  monitor.py  run_formatter.sh  run_static_analysis.sh  run_tests.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+41 more)
src/: error_handler.c  main.c  startup.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c  system_clock.c  template_appl.c  wes.c
test/: test_error_handler.c
